name:                transceiver
category:            Data
license:             MIT
license-file:        LICENSE
version:             0.1.0.0
author:              Sam Schweigel
maintainer:          s.schweigel@gmail.com
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://github.com/sjsch/transceiver/
synopsis:            Bidirectional syntax combinators.

library
  exposed-modules:     Data.Functor.Exp
                     , Data.Stream
                     , Transceiver.Parser
                     , Transceiver.Printer
                     , Transceiver.Syntax
                     , Transceiver.Syntax.Word8
                     , Transceiver.Syntax.Char
                     , Transceiver.Combinators
                     , Transceiver.Operators
                     , Transceiver
  build-depends:       base >=4.10 && <4.13
                     , contravariant >=1.5 && <1.6
                     , profunctors >=5.2 && <5.4
                     , text >=1.2 && <1.3
                     , bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
