cabal-version:       >=2.0
name:                transceiver
category:            Data
license:             MIT
license-file:        LICENSE
version:             0.1.0.0
author:              Sam Schweigel
maintainer:          s.schweigel@gmail.com
build-type:          Simple
homepage:            http://github.com/sjsch/transceiver/
synopsis:            Bidirectional syntax combinators.

library
  exposed-modules:     Data.Functor.Exp
                     , Data.Stream
                     , Transceiver.Parser
                     , Transceiver.Printer
                     , Transceiver.Syntax
                     , Transceiver.Syntax.Word8
                     , Transceiver.Syntax.Char
                     , Transceiver.Combinators
                     , Transceiver.Iso
                     , Transceiver.Operators
                     , Transceiver.Fields
                     , Transceiver
  build-depends:       base >=4.10 && <4.13
                     , bytestring >=0.10 && <0.11
                     , contravariant >=1.5 && <1.6
                     , profunctors >=5.2 && <5.4
                     , template-haskell >= 2.14.0.0
                     , text >=1.2 && <1.3
                     , named-sop ^>= 0.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
